primitives/npos-elections/solution-type/tests/ui/fail/wrong_page.stderr
error[E0412]: cannot find type `Perbill` in this scope
 --> $DIR/wrong_page.rs:7:14
  |
7 |         Accuracy = Perbill,
  |                    ^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 | use sp_arithmetic::Perbill;
  |

error[E0433]: failed to resolve: use of undeclared type `Perbill`
 --> $DIR/wrong_page.rs:7:14
  |
7 |         Accuracy = Perbill,
  |                    ^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 | use sp_arithmetic::Perbill;
  |

error[E0119]: conflicting implementations of trait `std::convert::TryFrom<&[_npos::IndexAssignment<u8, u16, [type error]>]>` for type `TestSolution`
 --> $DIR/wrong_page.rs:3:1
  |
3 | / generate_solution_type!(
4 | |     #[pages(1)] pub struct TestSolution::<
5 | |         VoterIndex = u8,
6 | |         TargetIndex = u16,
7 | |         Accuracy = Perbill,
8 | |     >(8)
9 | | );
  | |__^
  |
  = note: conflicting implementation in crate `core`:
          - impl<T, U> TryFrom<U> for T
            where U: Into<T>;
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
